[ios] Fix ambiguous selector name.

Rename ToolbarConsumer -setLoadingProgress: selector to avoid ambiguity
with property loadingProgress of UIDocumentBrowserTransitionController
added to iOS 11 SDK.

BUG=732323

Change-Id: I1feb46a2490ce309566cbc49aa4b3c8f76961581
Reviewed-on: https://chromium-review.googlesource.com/530946
Reviewed-by: Mark Cogan <marq@chromium.org>
Commit-Queue: Sylvain Defresne <sdefresne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#478935}
Former-commit-id: 76b8d1611c7b321ef24d8f63a6e58229f8db3de4