ios/clean/chrome/browser/ui/toolbar/toolbar_consumer.h
@@ -16,7 +16,7 @@
 // Updates the toolbar with the current loading state.
 - (void)setIsLoading:(BOOL)isLoading;
 // Updates the toolbar with the current progress of the loading WebState.
-- (void)setLoadingProgress:(double)progress;
+- (void)setLoadingProgressFraction:(double)progress;
 // Sets whether the toolbar should display for a visible tab strip or not.
 - (void)setTabStripVisible:(BOOL)visible;
 // Updates the toolbar with the current number of total tabs.
