ios/clean/chrome/browser/ui/toolbar/toolbar_view_controller.mm
@@ -324,7 +324,7 @@
   [self updateAllButtonsVisibility];
 }
 
-- (void)setLoadingProgress:(double)progress {
+- (void)setLoadingProgressFraction:(double)progress {
   [self.progressBar setProgress:progress animated:YES completion:nil];
 }
 
